# ansible-collection-scm

./: .ansible-lint  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Makefile-v2  README.md  TODO.md  galaxy.yml  test-requirements.txt
.config/: pycodestyle.cfg
.github/workflows/: clean-workflows.yml  forgejo-runner.yml  forgejo.yml  galaxy.yml  linter.yml  main.yml  opengist.yml
hooks/: _tox_base  converge  destroy  dispatch  doc  gh-clean.py  git.pre-commit  install  lint  manage_collections.py  molecule.rc  run_tox.py  run_tox.sh  test  uninstall  verify
meta/: runtime.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml
plugins/: README.md
plugins/filter/: check_hex.todo  forgejo.py  forgejo_runner.py  forgejo_runner_groups.py  forgejo_runner_labels.py  forgejo_runner_merge.py  forgejo_runner_validate_secrets.py  forgejo_sub_logger.py  forgejo_sub_logger_data.py  forgejo_validate_passwords.py
plugins/module_utils/: forgejo.py  forgejo_api.py  forgejo_backend.py  forgejo_config_parser.py  forgejo_ini.py  forgejo_user_nxt.py  github.py  github_backend.py  github_cache.py  release_backend.py  release_finder.py  release_resolver.py  scm_cache.py
plugins/modules/: forgejo.py  forgejo_admin_user.py  forgejo_auth.py  forgejo_cli.py  forgejo_config.py  forgejo_migrate.py  forgejo_runner.py  forgejo_user.py  forgejo_users.py  git_info.py  github_checksum.py  github_latest.py  (+3 more)
tools/: README.md  pyproject.toml
tools/src/forgejo_tools/: cli.py  colors.py  comment_cleaner.py  config_diff.py  repo_fetcher.py
tools/tests/: test_config_diff.py
(+238 files in other folders)
